fixed text position on mobile display
fixed text position on mobile display

--- a/style.css
+++ b/style.css
@@ -150,7 +150,6 @@ body  {
 	}
 
 	.maintitle{
-		padding-right: 20px;
 		line-height: 0px;
 		font-size: 24px;
 	}
